services section now responsive and collapsing correctly

--- a/hugo/themes/hugo-hero-theme/assets/scss/components/_hero-image.scss
+++ b/hugo/themes/hugo-hero-theme/assets/scss/components/_hero-image.scss
@@ -197,6 +197,7 @@
 
       video {
         object-fit: cover;
+        box-sizing: border-box;
         width: 100vw;
         height: 100vh;
         position: absolute;
