--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -110,3 +110,8 @@
   width: 100%;
   font-size: .8rem;
 }
+
+/* Mobile Styles for Services Section */
+.serviceImage {
+  max-width: 100%;
+}
